main added logo; fixed vite version

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <link
       rel="icon"
-      href="${PUBLIC_URL}static/img/favicon.ico?v=${APP_VERSION}"
+      href="${PUBLIC_URL}static/img/logo/favicon.ico?v=${APP_VERSION}"
     />
     <meta
       name="viewport"
@@ -21,7 +21,7 @@
     />
     <link
       rel="apple-touch-icon"
-      href="${PUBLIC_URL}static/img/apple-touch-icon.png?v=${APP_VERSION}"
+      href="${PUBLIC_URL}static/img/logo/apple-touch-icon.png?v=${APP_VERSION}"
     />
     <link
       rel="manifest"
